2011-08-30  Sergio Martin <sergio.martin@artica.es>

	* operation/projects/task.php: Fixed SQL error when 
	filter tasks by group. For incident #673

2011-08-30  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Fixed typo in delete task constant

2011-08-30  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php
	include/functions_db.php
	operation/projects/task.php: Fixed task
	unecessary tracking when delete a task replacing it
	for a project tracking

2011-06-29  Sancho Lerena <slerena@artica.es>

	* integria_db.sql: Fixed some table creation sql.
	Now a full install works fine.

2011-06-22  Sancho Lerena <salerena@artica.es>

	* include/graphs/functions_fsgraph.php: Fixed bad call to old
	function.

2011-06-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_incidents.php: Fixed incidents statistics
	report to show the graph adding ttl parameter

2011-06-21 Sancho Lerena <slerena@artica.es>

	* include/functions_incidents.php: Fixed group stats graph. Problem
	was due a weird HTML encoding...

2011-06-16 Sancho lerena <slerena@ærtica.es>

	* include/integria_cron.php,
	include/help/en/help_auto_incident_close.php: Autoclose is in DAYS.
	Fixed help and format date in data conversion.

	* include/functions_incidents.php: Stat graphs a bit bigger. Incident
	/group pie chart was non-legible.

2011-06-15 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/graphs/functions_pchart.php: Adding homedir to radar, kiviat 
	and polar graphs.
	* include/graphs/fgraph.php: Setting temp serialize files to true.

2011-06-14  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/pChart/pDraw.class.php
	include/graphs/functions_fsgraph.php
	include/graphs/functions_gd.php
	include/graphs/fgraph.php
	include/graphs/functions_utils.php
	include/config_process.php
	include/include_graph_dependencies.php: Merged latest 
	modifications in graph abstraction from pandora including